# elusion-kit

./: MANIFEST.in  ginx.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yaml
docs/examples/: README.md  simple-sdk.md
examples/elusion_jokes/examples/: basic_usage.py
examples/elusion_jokes/src/elusion/jokes/: __init__.py  authentication.py  enum.py  exceptions.py  jokes_resource.py  models.py  pyproject.toml  sdk.py
src/elusion/: __init__.py
tests/: conftest.py
tests/test_core/: test_authentication.py  test_base_models.py  test_configuration.py  test_http_client.py  test_retry_handler.py
